<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eric\'s Weather Forecaster</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="temp_day_of_week">Day of Week</string>
    <string name="temp_weather_condition">Overview of weather condition.</string>
    <string name="label_weather_detail_title">Day of Week</string>
    <string name="label_condition">Condition: </string>
    <string name="label_forecast">Forecast: </string>
    <string name="label_icon_url">Icon URL: </string>
    <string name="action_refresh">Refresh</string>
    <string name="action_clear_cache">Clear cache</string>
    <string name="actions_network">Network</string>

</resources>
