<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_action_navigation_refresh"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView|ifRoom" />

    <item android:id="@+id/action_clear_cache"
        android:title="@string/action_clear_cache"
        android:orderInCategory="101"
        android:showAsAction="never" />

    <item android:id="@+id/action_network"
        android:title="@string/actions_network"
        android:orderInCategory="102"
        android:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="103"
        android:showAsAction="never" />

</menu>
