<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAppearance="?android:textAppearanceLarge"
        android:text="@string/label_weather_detail_title"
        android:id="@+id/dayTV"
        android:layout_gravity="center_horizontal" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/label_condition"
                android:id="@+id/conditionLabel"
                android:padding="5dp" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:id="@+id/conditionTV"
                android:padding="5dp" />

        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/label_forecast"
                android:id="@+id/forecastLabel"
                android:padding="5dp" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:id="@+id/forecastTV"
                android:padding="5dp" />

        </TableRow>

        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/label_icon_url"
                android:id="@+id/iconURLLabel"
                android:padding="5dp"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:id="@+id/iconURLTV"
                android:padding="5dp" />

        </TableRow>

    </TableLayout>

</LinearLayout>